--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </ul>
         </nav>
     </header>
-    <section>
-        Main image
+    <section id="hero_outer">
+       <div id="hero-image"></div>
     </section>
     <section>
         Club Ethos
